// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly a11y renders correctly with a11y props (false) 1`] = `
<button
  aria-busy={false}
  aria-controls="area"
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup={false}
  aria-label="text"
  aria-labelledby="id"
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly a11y renders correctly with a11y props (true) 1`] = `
<button
  aria-busy={false}
  aria-controls="area"
  aria-disabled={false}
  aria-expanded={true}
  aria-haspopup={true}
  aria-label="text"
  aria-labelledby="id"
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- brand 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorBrand"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- fixed-light 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorFixedLight"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- inverted 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorInverted"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- negative 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorNegative"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- on-inverted-background 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorOnInvertedBackground"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- on-primary-color 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorOnPrimaryColor"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- positive 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPositive"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- primary 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- primary 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- secondary 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindSecondary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- tertiary 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindTertiary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- large 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeLarge kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- medium 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- small 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeSmall kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with callbacks 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="test button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with className 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="test button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with empty props 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with id 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button_test"
  data-vibe="button"
  id="test"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with leftIcon 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <svg
    aria-hidden={true}
    className="icon leftIcon noFocusStyle"
    data-testid="icon"
    data-vibe="icon"
    fill="currentColor"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <path
      clipRule="evenodd"
      d="M10.778 2.657c.972-.928 2.576-.86 3.544-.027a2.482 2.482 0 0 1 .78 2.59h1.039c.966 0 1.75.783 1.75 1.75v1.677a1.75 1.75 0 0 1-1.75 1.75h-.124V16a1.75 1.75 0 0 1-1.75 1.75H5.7A1.75 1.75 0 0 1 3.951 16v-5.603h-.12a1.75 1.75 0 0 1-1.75-1.75V6.97c0-.967.783-1.75 1.75-1.75h.911a2.483 2.483 0 0 1 .78-2.586c.97-.833 2.573-.9 3.546.027.381.365.65.782.848 1.09l.005.008.009-.013c.197-.307.466-.725.848-1.089Zm2.566 1.11c-.449-.386-1.176-.363-1.53-.025-.25.238-.431.519-.646.852l-.038.059c-.102.158-.231.359-.396.549h2.325l.042.002c.29.016.488-.14.57-.435a.983.983 0 0 0-.327-1.002Zm-6.843.004c.45-.386 1.177-.363 1.531-.024.25.237.43.518.646.851l.037.06c.102.157.232.358.396.548H6.786l-.042.002c-.29.016-.488-.139-.57-.435a.983.983 0 0 1 .327-1.002Zm2.733 5.126H3.83a.25.25 0 0 1-.25-.25V6.97a.25.25 0 0 1 .25-.25h5.404v2.177Zm1.502 0V6.72h5.405a.25.25 0 0 1 .25.25v1.677a.25.25 0 0 1-.25.25h-5.405ZM5.451 16v-5.603h3.781v5.853h-3.53a.25.25 0 0 1-.25-.25Zm5.284.25v-5.853h3.782V16a.25.25 0 0 1-.25.25h-3.532Z"
      fillRule="evenodd"
    />
  </svg>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with props change ui 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary colorPrimaryActive undefined marginRight marginLeft rightFlat leftFlat noSidePadding"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with rightIcon 1`] = `
<button
  aria-busy={false}
  aria-disabled={false}
  className="button sizeMedium kindPrimary colorPrimary"
  data-testid="button"
  data-vibe="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
  <svg
    aria-hidden={true}
    className="icon rightIcon noFocusStyle"
    data-testid="icon"
    data-vibe="icon"
    fill="currentColor"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <path
      clipRule="evenodd"
      d="M10.778 2.657c.972-.928 2.576-.86 3.544-.027a2.482 2.482 0 0 1 .78 2.59h1.039c.966 0 1.75.783 1.75 1.75v1.677a1.75 1.75 0 0 1-1.75 1.75h-.124V16a1.75 1.75 0 0 1-1.75 1.75H5.7A1.75 1.75 0 0 1 3.951 16v-5.603h-.12a1.75 1.75 0 0 1-1.75-1.75V6.97c0-.967.783-1.75 1.75-1.75h.911a2.483 2.483 0 0 1 .78-2.586c.97-.833 2.573-.9 3.546.027.381.365.65.782.848 1.09l.005.008.009-.013c.197-.307.466-.725.848-1.089Zm2.566 1.11c-.449-.386-1.176-.363-1.53-.025-.25.238-.431.519-.646.852l-.038.059c-.102.158-.231.359-.396.549h2.325l.042.002c.29.016.488-.14.57-.435a.983.983 0 0 0-.327-1.002Zm-6.843.004c.45-.386 1.177-.363 1.531-.024.25.237.43.518.646.851l.037.06c.102.157.232.358.396.548H6.786l-.042.002c-.29.016-.488-.139-.57-.435a.983.983 0 0 1 .327-1.002Zm2.733 5.126H3.83a.25.25 0 0 1-.25-.25V6.97a.25.25 0 0 1 .25-.25h5.404v2.177Zm1.502 0V6.72h5.405a.25.25 0 0 1 .25.25v1.677a.25.25 0 0 1-.25.25h-5.405ZM5.451 16v-5.603h3.781v5.853h-3.53a.25.25 0 0 1-.25-.25Zm5.284.25v-5.853h3.782V16a.25.25 0 0 1-.25.25h-3.532Z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;
